<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Safepod</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="title_section0">Home</string>
    <string name="title_section1">Safe Zone Map</string>
    <string name="title_section2">Settings</string>
    <string name="title_section3">Forum</string>
    <string name="action_example">Action Example</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_safety_map">SafetyMapActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_forum">Forum</string>
    <string name="title_activity_safe_zone_map">Safe Zone Map</string>
    <string name="dialog_enter_pin">Please enter your pin</string>
    <string name="dialog_done_with_pin">Done</string>
    <string name="title_activity_modify_trip">Trip Started</string>
    <string name="action_search">Search</string>
    <string name="action_write_testimonial">Write Testimonial</string>
    <string name="dialog_change_time">Change time of return</string>
    <string name="dialog_resp_yes">Yes</string>
    <string name="dialog_resp_no">No</string>
    
    <string name="title_activity_set_home_location">SetHomeLocationActivity</string>
    <string name="geofence_not_available">geofence_not_available</string>
    <string name="geofence_too_many_geofences">geofence_too_many_geofences</string>
    <string name="geofence_too_many_pending_intents">geofence_too_many_pending_intents</string>
    <string name="unknown_geofence_error">unknown_geofence_error</string>
    <string name="geofence_transition_invalid_type">geofence_transition_invalid_type</string>
    <string name="geofence_transition_notification_text">geofence_transition_notification_text</string>
    <string name="geofence_transition_entered">geofence_transition_entered</string>
    <string name="geofence_transition_exited">geofence_transition_exited</string>
    <string name="unknown_geofence_transition">unknown_geofence_transition</string>
    
    <string name="title_activity_choose_your_pin">Set Pin</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Choose Pin</string>
    <string name="action_sign_in">Save Pin</string>
    <string name="action_sign_in_short">Set Pin</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->


    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message history</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>

    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>

    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="home_address">Set your home address</string>
    <string name="SubmitAddressButton">Submit</string>
    <string name="ClearAddressButton">Clear</string>

    <string name="service_not_available">service_not_available</string>
    <string name="invalid_lat_long_used">invalid_lat_long_used</string>
    <string name="no_address_found">no_address_found</string>
    <string name="address_found">address_found</string>
</resources>