<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.safepodapp.ui.SetHomeLocationActivity"
    android:background="@color/dark" >

    <TextView
        android:id="@+id/setHomeAddressTextView"
        android:fontFamily="josephine-sans"
        android:textColor="@color/light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/home_address"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/clear_button"
        android:fontFamily="josephine-sans"
        android:textColor="@color/light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/ClearAddressButton" />

    <Button
        android:id="@+id/submit_button"
        android:fontFamily="josephine-sans"
        android:textColor="@color/light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/SubmitAddressButton" />

    <EditText
        android:id="@+id/enterAddressEditText"
        android:fontFamily="josephine-sans"
        android:textColor="@color/light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/clear_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:textCursorDrawable="@xml/color_cursor"
        android:inputType="textPostalAddress" />

</RelativeLayout>