<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.safepodapp.ui.ChooseYourPinActivity" 
    android:background="@color/dark" >

    <TextView
        android:id="@+id/setPinTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Choose your 5 digit pin"
        android:fontFamily="josephine-sans"
        android:textColor="@color/light"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:fontFamily="josephine-sans"
        android:textColor="@color/light"
        android:inputType="numberPassword"
        android:maxLines="1"
        android:textCursorDrawable="@xml/color_cursor"
        android:singleLine="true" >
        
        <requestFocus />
	</EditText>

    <EditText
        android:id="@+id/confirm_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:fontFamily="josephine-sans"
        android:textColor="@color/light"
        android:inputType="numberPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:enabled="false"/>

    <Button
        android:id="@+id/set_pin_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:fontFamily="josephine-sans"
        android:textColor="@color/light"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/action_sign_in"
        android:textStyle="bold" 
        android:enabled="false" />

</LinearLayout>